--- a/assign1/styles/style.css
+++ b/assign1/styles/style.css
@@ -355,6 +355,16 @@ text-align: left;
 
 #parallax-container li{
   list-style-position: inside;
+  padding-top: 0.2em;
+  padding-bottom: 0.5em;
+  padding-left: 2em;
+}
+#parallax-container li li{
+  list-style-position: inside;
+  /* padding-top: 0em; */
+  padding-bottom: 0em;
+  margin-left: 0em;
+  margin-right: 1em;
 }
 /*darkmode config*/
 #toggleMode:checked ~ #parallax-container{
