[C] - changed text alignment to justify
cleaned up watermark from stock image, changed aside layout on mobile

--- a/assign1/styles/style.css
+++ b/assign1/styles/style.css
@@ -99,6 +99,11 @@ body {
     width: 100vw;
 }
 
+/*justify all paragraphs*/
+body p{
+  text-align: justify;
+}
+
 /* Footer */
 footer{
     background-color: #272838;
@@ -229,7 +234,6 @@ main#parallax-container{
   perspective: 1px;
   width: 100%;
   color: #272838;
-  
 }
 
 #parallax-container section{
@@ -674,7 +678,7 @@ textarea{
 
   /*For topic.html & enhancements.html*/
   #parallax-container section.parallax h1 {
-    font: bold 6.5vmin "Google Sans", sans-serif;
+    font: bold 7.5vmin "Google Sans", sans-serif;
     margin-left: 10vw;
     margin-right: 10vw;
     padding-top: 10vmin;
@@ -683,7 +687,7 @@ textarea{
   }
 
   #parallax-container section.parallax h2 {
-    font-size: 4.5vmin;
+    font-size: 6.5vmin;
     margin-left: 10vw;
     margin-right: 10vw;
     padding-top: 10vh;
@@ -691,17 +695,29 @@ textarea{
   }
 
   #parallax-container .no-parallax h2, #parallax-container .no-parallax h3, #parallax-container .no-parallax th{
-    font-size: 4.5vmin;
+    font-size: 5vmin;
     padding: 1.8vmin;
-    margin-left: 20vmin;
-    margin-right: 30vmin;
+    margin-left: 5vw;
+    margin-right: 5vw;
   }
 
   #parallax-container p, #parallax-container td, #parallax-container li{
-    padding: 5vmin;
-    font-size: 2.2vmin;
-    margin-left: 20vmin;
-    margin-right: 20vmin;
+    padding: 4.5vmin;
+    font-size: 4vmin;
+    margin-left: 5vw;
+    margin-right: 5vw;
+  }
+
+  /*indentation spans*/
+  .citation span.indent{
+    display: inline-block;
+    width: 2em;
+  }
+
+  /*aside*/
+  aside{
+    width: 95%;
+    margin: auto;
   }
 
 
@@ -741,10 +757,16 @@ textarea{
 
   input{
     padding: 0.5vh 1vw 0.5vh 1vw;
+    font-size: 2vmin;
   }
 
   select{
     padding: 0.5vh 1vw 0.5vh 1vw;
+    font-size: clamp(10px, 2vmin, 2vmin);
+  }
+
+  textarea{
+    font-size: 2vmin;
   }
 }
 
@@ -765,8 +787,51 @@ textarea{
     width: 32vmin;
   }
 
-  /*For topic.html & enhancements.html*/
 
+
+  /*For topic.html & enhancements.html*/
+  #parallax-container section.parallax h1 {
+    font: bold 10vmin "Google Sans", sans-serif;
+    margin-left: 10vw;
+    margin-right: 10vw;
+    padding-top: 10vmin;
+    padding-bottom: 10vmin;
+    z-index: 2;
+  }
+
+  #parallax-container section.parallax h2 {
+    font-size: 7vmin;
+    margin-left: 10vw;
+    margin-right: 10vw;
+    padding-top: 10vh;
+    z-index: 2;
+  }
+
+  #parallax-container .no-parallax h2, #parallax-container .no-parallax h3, #parallax-container .no-parallax th{
+    font-size: 4vmin;
+    padding: 1.8vmin;
+    margin-left: 5vw;
+    margin-right: 5vw;
+  }
+
+  #parallax-container p, #parallax-container td, #parallax-container li{
+    font-size: 3vmin;
+    padding: 4.5vmin;
+    margin-left: 5vw;
+    margin-right: 5vw;
+  }
+
+  /*indentation spans*/
+  .citation span.indent{
+    display: inline-block;
+    width: 2em;
+  }
+
+  /*aside*/
+  aside{
+    width: 95%;
+    margin: auto;
+  }
 
   
 
@@ -805,9 +870,15 @@ textarea{
 
   input{
     padding: 0.5vh 1vw 0.5vh 1vw;
+    font-size: 2vmin;
   }
 
   select{
     padding: 0.5vh 1vw 0.5vh 1vw;
+    font-size: 2vmin;
+  }
+
+  textarea{
+    font-size: 2vmin;
   }
 }
