--- a/assign1/styles/style.css
+++ b/assign1/styles/style.css
@@ -260,8 +260,8 @@ main#parallax-container{
 }
 
 .no-parallax img{
-  width: 55vmin;
-  height: 30vmin;
+  max-width: 71.5vw;
+  height: auto;
   margin-left: 20vmin;
   padding: 1.8vmin;
 }
@@ -356,7 +356,7 @@ text-align: left;
   margin-right: 30vmin;
 }
 
-#parallax-container p, #parallax-container td, #parallax-container li{
+#parallax-container p, #parallax-container td, #parallax-container li, #parallax-container figcaption{
   color: var(--text);
   padding: 1.8vmin;
   font-size: 2.2vmin;
@@ -701,11 +701,19 @@ textarea{
     margin-right: 5vw;
   }
 
-  #parallax-container p, #parallax-container td, #parallax-container li{
+  #parallax-container p, #parallax-container td, #parallax-container li, #parallax-container figcaption{
     padding: 4.5vmin;
     font-size: 4vmin;
     margin-left: 5vw;
     margin-right: 5vw;
+  }
+
+  .no-parallax img{
+    max-width: 71.2vw;
+    height: auto;
+    margin-left: 5vw;
+    margin-right: 5vw;
+    padding: 0 4.5vmin;
   }
 
   /*indentation spans*/
@@ -814,11 +822,19 @@ textarea{
     margin-right: 5vw;
   }
 
-  #parallax-container p, #parallax-container td, #parallax-container li{
+  #parallax-container p, #parallax-container td, #parallax-container li, #parallax-container figcaption{
     font-size: 3vmin;
     padding: 4.5vmin;
     margin-left: 5vw;
     margin-right: 5vw;
+  }
+
+  .no-parallax img{
+    max-width: 71vw;
+    height: auto;
+    margin-left: 5vw;
+    margin-right: 5vw;
+    padding: 0 4.5vmin;
   }
 
   /*indentation spans*/
